--- a/app/globals.css
+++ b/app/globals.css
@@ -13,7 +13,7 @@
       rgba(255, 255, 255, 0.4),
       rgba(255, 255, 255, 0.4)
     ),
-    linear-gradient(90.01deg, #e59cff 0.01%, #ba9cff 50.01%, #9cb2ff 100%);
+    linear-gradient(90.01deg, #5582ff 0.01%, #9cffb5 50.01%, hwb(133 15% 35%) 100%);
   background-blend-mode: normal, screen;
   -webkit-background-clip: text;
   background-clip: text;
@@ -26,7 +26,7 @@
   -webkit-backdrop-filter: blur(6px);
   backdrop-filter: blur(6px);
   border-radius: 32px;
-  box-shadow: inset 0 -7px 11px #a48fff1f;
+  box-shadow: inset 0 -7px 11px #8fff9e1f;
   display: flex;
 
   position: relative;
@@ -42,7 +42,7 @@
       rgba(60, 8, 126, 0.32) 100%
     ),
     rgba(113, 47, 255, 0.12);
-  box-shadow: inset 0 0 12px #bf97ff3d;
+  box-shadow: inset 0 0 12px #a0ff973d;
 }
 .button-primary:hover {
   background: linear-gradient(
